# cpp-neural-net

./: CMakeLists.txt  README.md
include/: activation.hpp  layer.hpp  nn.hpp
src/: main.cpp
